# repotest

./: .gitignore  1.ipynb  README.md  pyproject.toml  pytest.ini
assets/: repotest_architecture.drawio
collect/: github_client.py  step1_collect_repos.py  step1_s3_collect_repos.py  step2_pr_issue_mapping.py  step3_metadata_extraction_and_filtering.py  step4_extract_patches.py  step5_build_repo.py  step6_e2e_execution.py
collect/gql/: issue_details.gql  issue_pr_map.gql  pr_details.gql  repo_details.gql  search_repos.gql
collect/lang/: __init__.py  s3_golang.py
docs/: sphinx_setup.md
repotest/: __init__.py  constants.env  constants.py  logger.py
repotest/cli/: liveswebench.py
repotest/core/: README.md  base.py  exceptions.py  models.py
repotest/core/docker/: __init__.py  base.py  cpp.py  dataclass.py  golang.py  java.py  javascript.py  kotlin.py  nodejs.py  php.py  python.py  ruby.py  rust.py  scala.py  types.py  typescript.py
repotest/core/local/: __init__.py  base.py  java.py  python.py
repotest/manager/: java_testgen_task_manager.py  liveswebench_task_collector_manager.py  liveswebench_task_manager.py  realcode_java_task_manager.py  realcode_python_task_manager.py  realcode_task_collector_manager.py
repotest/parsers/java/: jacoco_report.py  maven_stdout.py  surefire_report.py
repotest/parsers/python/: collect_task.py  javascript_stout.py  pytest_stdout.py
repotest/scripts/: README.md  build_image.py  check_instalation.py
repotest/scripts/images/realcode_image/: Dockerfile
repotest/utils/git/: _get_git_params.py  git_diff_wrapper.py
repotest/utils/java/: java_test_fixer.py  pom_file_fixer.py
tests/: conftest.py
tests/big_test/: realcode_docker.py  realcode_local.py  task_list.json  task_list_old.json
tests/core/: test_greedy.py  test_realcode_python_task_manager.py  test_timeout.py
tests/core/docker/: test_cpp_docker_repo.py  test_golang_docker_repo.py  test_java_docker_repo.py  test_javascript_docker_repo.py  test_kotlin_docker_repo.py  test_php_docker_repo.py  test_python_docker_repo.py  test_ruby_docker_repo.py  test_rust_docker_repo.py  test_scala_docker_repo.py  test_typescript_docker_repo.py
tests/core/java/docker/: test_cpp_docker_repo.py  test_golang_docker_repo.py  test_java_docker_repo.py  test_kotlin_docker_repo.py  test_php_docker_repo.py  test_ruby_docker_repo.py  test_rust_docker_repo.py  test_scala_docker_repo.py  test_typescript_docker_repo.py
tests/core/java/local/: test_java_local_repo.py
tests/core/local/: test_java_local_repo.py
tests/fixtures/: java_example.py
tests/integration/: README.md  conftest.py  run_tests.py  test_java_testgen_evaluation.py  test_java_testgen_validation.py  test_metrics_validation.py  test_realcode_evaluation.py  test_task_manager_java_testgen.py
tests/integration/data/: samples_java_testgen.jsonl
