[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
repotest = ["constants.env"]

[tool.setuptools.packages.find]
where = [""]  # ["."] by default
include = ["repotest*"]  # ["*"] by default

[project]
name = "repositorytest"
version = "0.5.9"
license = "MIT"
description = "A tool for cloning and testing repositories (docker or local, interface is the same)."
readme = "README.md"
authors = [
    {name = "Pavel Adamenko", email = "padamenko@gmail.com"},
]
requires-python = ">=3.6"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "docker",
    "gitpython",
    "tenacity>=9.0.0",
    "python-dotenv",
    "colorama==0.4.6",
    "tqdm==4.67.1",
    "psutil",
    "fire>=0.6.0",
    "ipython==8.12.2", # bug fire & old ipython version
    "coverage>=7.7.0"
]

[project.urls]
"Homepage" = "https://github.com/MERA-Evaluation/repotest"
"Bug Tracker" = "https://github.com/MERA-Evaluation/repotest/issues"


[project.optional-dependencies]
dev = [
    "setuptools",
    "pytest",
    "build",
    "pandas >= 2.0.0",
    "pytest-json-report >= 1.5.0",
    "python-dotenv"
]

[project.scripts]
liveswebench = "repotest.cli.liveswebench:main_fire_entry_point"
swemera = "repotest.cli.liveswebench:main_fire_entry_point"

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test",
    "slow: mark test as slow running test",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]